tests/baselines/reference/importTypeGenericTypes.errors.txt
foo2.ts(18,5): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
usage.ts(5,5): error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.


==== foo.ts (0 errors) ====
    interface Point<T> {
        x: number;
        y: number;
        data: T;
    }
    export = Point;
    
==== foo2.ts (1 errors) ====
    namespace Bar {
        export interface I<T> {
            a: string;
            b: number;
            data: T;
        }
    }
    
    export namespace Baz {
        export interface J<T> {
            a: number;
            b: string;
            data: T;
        }
    }
    
    class Bar<T> {
        item: Bar.I<T>;
        ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
        constructor(input: Baz.J<T>) {}
    }
    export { Bar }
    
==== usage.ts (1 errors) ====
    export const x: import("./foo")<{x: number}> = { x: 0, y: 0, data: {x: 12} };
    export let y: import("./foo2").Bar.I<{x: number}> = { a: "", b: 0, data: {x: 12} };
    
    export class Bar2<T> {
        item: {a: string, b: number, c: object, data: T};
        ~~~~
!!! error TS2564: Property 'item' has no initializer and is not definitely assigned in the constructor.
        constructor(input?: any) {}
    }
    
    export let shim: typeof import("./foo2") = {
        Bar: Bar2
    };
    